2012-04-10  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/jquery.pandora.controls.js
	include/javascript/pandora.js
	include/functions_agents.php
	operation/agentes/ver_agente.php
	godmode/groups/group_list.php
	godmode/massive/massive_add_alerts.php
	godmode/massive/massive_delete_action_alerts.php
	godmode/massive/massive_delete_modules.php
	godmode/massive/massive_delete_alerts.php
	godmode/massive/massive_edit_modules.php
	godmode/massive/massive_add_action_alerts.php: Improve
	several massive operations merged from trunk

2012-04-09 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_ui.php: cleaned source code style.
	
	* extensions/update_pandora,
	extensions/update_pandora/functions.ajax.php,
	extensions/update_pandora/functions.php,
	extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/lib/functions.php: moved this files into the
	extension update_manager.

	* extensions/update_manager/main.php: added hook (as a tab) the 
	"update_pandora".

2012-04-09  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reports.php: Fixed "forecating"
	typo error merged from trunk

2012-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/update_pandora/functions.ajax.php,
	extensions/update_pandora/functions.php, extensions/update_pandora.php:
	started to join to the openupdatemanager and some fixeds.

2012-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/update_manager.php,
	extensions/update_manager/load_updatemanager.php,
	extensions/update_manager/lib/xmlrpc/xmlrpc.inc,
	extensions/update_manager/lib/libupdate_manager_client.php,
	extensions/update_manager/lib/libupdate_manager.php,
	extensions/update_manager/main.php: cleaned source code style.
	
	* extensions/update_manager/settings.php: disabled the path because this
	conf it is burned with each update of PHP files.

2012-04-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/javascript/pandora_modules.js